fix: resolve remaining compilation errors - collect/loyalty/loan